<resources>
    <string name="app_name">TUber</string>
    <string name="tuber">TUber</string>
    <string name="the_easiest_way_to_move">The Easiest Way to Move</string>
    <string name="the_easiest_way_n_to_move">The Easiest Way \n to Move !</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue1">Continue</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="your_email">Your Email</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="terms_and_conditions">Terms and conditions :</string>
    <string name="terms">As a condition of use , you promise not to use the services for any purpose that is unlawful or prohibited by these terms, or any other purpose not reasonably intended by TUber. By way of example, and not as a limitaion, you agree not to use the services: \n 1. To create or transmit unwanted \'spam\' to any user of TUber.\n 2. To create multiple accounts for fun. \n \n If you accept these terms :\n 1. TUber will not be responsible for your safety while you ride with another TUber user or while you are being with another TUber user in the same car.\n 2. TUber will not be responsible for your insurance when you use the application to get a carpooling.\n 3. TUber will not be responsible for any problem or misunderstanding between users.\n \n Thank you for reading and accepting these terms to finish your registration in TUber</string>
    <string name="checkboc_terms">Accept terms and conditions</string>
    <string name="register">Register</string>
    <string name="add_a_carpooling">Add a carpooling</string>
    <string name="home">Home</string>
    <string name="title_activity_home2">home2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position"> \t Position</string>
    <string name="number_of_places">\t  Number of places</string>
    <string name="car_model"> \t Car model</string>
    <string name="car_registration_number">Car registration number:</string>
    <string name="car_registration_number2"> \t Car registration number</string>
    <string name="time"> \t Time</string>
    <string name="destination"> \t destination</string>
    <string name="facebook_account">Facebook account:</string>
    <string name="link_to_your_facebook_account">\t  Link to your Facebook </string>
    <string name="confirm">Confirm</string>
    <string name="departing_position">Departing position:</string>
    <string name="car_model2">Car model:</string>
    <string name="destination2">Destination:</string>
    <string name="time_of_departing">Time of departing:</string>
    <string name="number_of_places2">Number of places:</string>
    <string name="carpooling_announcement">Carpooling \n announcement</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="create_an_account">Create an account</string>
    <string name="your_password">Your password</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="textview">TextView</string>
    <string name="your_last_name">Your last name :</string>
    <string name="your_first_name">Your first name :</string>
    <string name="your_email2">Your email :</string>
    <string name="your_phone_number2">Your phone number :</string>
    <string name="modify_your_account">Modify your account</string>
    <string name="fléche"><![CDATA[=>]]></string>
</resources>