<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Add_carpooling">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="396dp"
        android:layout_height="559dp"
        android:layout_marginTop="84dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:text="Departure:"
                android:textColor="#A1887F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/position"
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/position"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="10sp"
                android:shadowColor="@color/black"
                android:textColor="@color/grey"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/destination2"
                android:textColor="#A1887F"

                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"

                android:autofillHints=""
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/destination"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="10sp"
                android:textColor="@color/grey"
                android:textColorHint="#757575"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"

                android:layout_marginTop="25dp"
                android:text="Time of departure:"
                android:textColor="#A1887F"
                android:textSize="20sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""

                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                android:minHeight="48dp"

                android:paddingLeft="10sp"
                android:textColor="@color/grey"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/number_of_places2"
                android:textColor="#A1887F"
                android:textSize="20sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"

                android:autofillHints=""
                android:background="@drawable/layout_bg"
                android:ems="10"

                android:hint="@string/number_of_places"
                android:inputType="textPersonName"

                android:minHeight="48dp"
                android:paddingLeft="10sp"
                android:textColor="@color/grey"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/car_model2"
                android:textColor="#A1887F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"

                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/car_model"
                android:inputType="textPersonName"
                android:minHeight="48dp"

                android:paddingLeft="10sp"
                android:textColor="@color/grey"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"

                android:layout_marginTop="25dp"
                android:text="@string/car_registration_number"
                android:textColor="#A1887F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""

                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/car_registration_number2"

                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="10sp"
                android:textColor="@color/grey"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/facebook_account"
                android:textColor="#A1887F"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"

                android:autofillHints=""
                android:background="@drawable/layout_bg"
                android:ems="10"
                android:hint="@string/link_to_your_facebook_account"
                android:inputType="textPersonName"

                android:minHeight="48dp"
                android:outlineAmbientShadowColor="@color/grey"
                android:paddingLeft="10sp"
                android:textColor="@color/grey"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button7"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/purple_500"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="411dp"
        android:layout_height="81dp"
        android:background="@color/purple_500"
        android:text="@string/carpooling_announcement"
        android:textAlignment="center"

        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>